--- a/challenges/package.xml
+++ b/challenges/package.xml
@@ -62,7 +62,8 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
  
-  <depend>challenge_msgs</depend>
+  <depend>msgs_srvs</depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
